Resolves: tdf#116429 unwanted extra step in undo insert shape

Change-Id: I23065275baa60a09f2a3c15513e3f2b8160e2bf0
Reviewed-on: https://gerrit.libreoffice.org/51706
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 655d7340536ed2847d1da873b141d8776f791d12)
Reviewed-on: https://gerrit.libreoffice.org/51711
(cherry picked from commit deb5db7bf6d45338c9b6f6f4a1d62fba168b7a85)